--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "ejs": "^2.7.4",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "simple-peer": "^9.6.2"
   },
   "devDependencies": {
     "request": "^2.88.2",
